--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1682.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.15",
@@ -26,9 +27,11 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.33",
     "mongoose": "^6.0.10",
-    "multer": "^1.4.3",
+    "multer": "^1.4.4",
+    "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.4",
+    "sharp": "^0.33.5",
     "shortid": "^2.2.16",
     "socket.io": "^4.7.5",
     "winston": "^3.3.3"
